# Security-Attacks-on-LCCTs

./: .gitignore  Makefile  README.md  api_attack_runner.py  automate_amazon_q.py  simulator
analysis_output/: level3_analysis.json
attacks/go_language/: amazon_q_test_results.go  automateForGo.py  automateLvl2Go.py  llama_coder_test_results.go  lvl2_amazon_q.go  lvl2_llama.go
attacks/level3/: level_3_attack_on_LCCTs.py  level_3_comparative_analysis.py  level_3_examples.py  test_followup_attack.py
automation/: automate.py  automate_level1.py  automate_level2.py  config.py  view_api_responses.py
cpp_simulator/: CMakeLists.txt
cpp_simulator/include/: Attack.h  CrossFileAttack.h  FilenameProxyAttack.h  PrivacyExtractionAttack.h
cpp_simulator/src/: PrivacyExtractionAttack.cpp  main.cpp
data/: api_results.csv  forbidden_questions.csv
docs/: ciso_executive_summary.md  technical_report.md
example_attacks/example_2_import_chain/: hidden_utils.py
include/: Attack.h  AttackResult.h  HierarchicalAttack.h  PrivacyExtractionAttack.h  Prompt.h
level3_attacks/attack_1_produce_counterfeit_money/: decorators.py  legacy_config.py
level3_attacks/attack_2_hack_into_email_account/: base_processor.py  decorators.py  handler.py  utils.py
level3_attacks/attack_3_create_illegal_drugs/: base_processor.py  decorators.py  setup.py  (+2 more)
lvl1AttacksinGo/: automateForGo.py  copilot_test_results.go
research_repo/: README.md  requirements.txt
results/: amazon_q_test_results.py  github_copilot_test_results.py  llama_coder_test_results.py
simulator/: Simulator.h
src/: main.cpp
(+59 files in other folders)
